fixed css overlapping issues and added an centered a submit button

--- a/src/quizzer/QuizCard.css
+++ b/src/quizzer/QuizCard.css
@@ -1,7 +1,7 @@
-.quiz_card {
+.quiz_view_card {
     background-color: white;
     border-radius: 1rem;
-    padding: 1rem;
+    padding: 2rem;
 }
 
 .title {
