--- a/src/quizzer/QuizExpanded.css
+++ b/src/quizzer/QuizExpanded.css
@@ -1,7 +1,7 @@
 .quiz_card {
     background-color: white;
     border-radius: 1rem;
-    padding: 1rem;
+    padding: 3rem;
 }
 
 .title {
